# ood-robustness

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  environment.yaml  prepare_data.py  pyproject.toml  run_experiment.py  settings.ini
config/: config.yaml
config/dataset/: cifar10.yaml  imagenet.yaml  shapetastic_cb_cs.yaml  shapetastic_gs.yaml  shapetastic_gs_rot.yaml  shapetastic_ni_32.yaml  shapetastic_ni_64.yaml
config/dataset/defaults/: defaults.yaml
config/experiment/: compression_jpeg.yaml  gaussianblur.yaml  hueshift.yaml  no_transform.yaml  pixel_transforms.yaml
config/experiment/defaults/: defaults.yaml
config/model/: ebo_model_v1.yaml  ebo_model_v2.yaml  ebo_model_v3.yaml  ebo_model_v4.yaml  ebo_model_v5.yaml  hb_model_v1.yaml  hb_model_v2.yaml  hb_model_v3.yaml  hb_model_v4.yaml  hb_model_v5.yaml  hb_vit_model_v1.yaml  hb_vit_model_v2.yaml  hb_vit_model_v3.yaml  hb_vit_model_v4.yaml  hb_vit_model_v5.yaml  poem_model_v1.yaml  poem_model_v2.yaml  poem_model_v3.yaml  poem_model_v4.yaml  poem_model_v5.yaml
data/shapetastic_definitions/shapetastic_50k_cb_cs/: draw_ellipse.csv  draw_parallelogram.csv  draw_polygon.csv  (+2 more)
ood_robustness/: __init__.py  energy.py  experiment.py
ood_robustness/experiments/: __init__.py  aggregator.py
ood_robustness/model/: __init__.py  encoder.py  model_utils.py
ood_robustness/transforms/: __init__.py  image.py  tensor.py  util.py
ood_robustness/utils/: config.py  files.py  model.py  pixels.py  plotting.py  random.py  torch.py  zenodo.py
(+18 files in other folders)
